apps/tandoor/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tandoor
  namespace: apps
spec:
  selector:
    app: tandoor
  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP
