apps/tandoor/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tandoor
  namespace: apps
spec:
  ingressClassName: traefik
  rules:
    - host: tandoor.stoneforge.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: tandoor
                port:
                  number: 80
